[project]
name = "homeassistant-goecontroller-mqtt"
version = "0.0.3"
description = "A Home Assistant custom component for the go-eController"
readme = "README.md"
authors = [
    {name = "KO. Mattsson", email = "karloskarmattsson@gmail.com"},
]
license = {text = "MIT"}
requires-python = "<3.13,>=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pytest-homeassistant-custom-component==0.13.184",
    "aiohttp-cors<1.0.0,>=0.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
ignore = ["E711", "E712"]
